Initial Java 11 refactor.