@@ -1,13 +1,11 @@
 package io.luna.game.model;
 
-import com.google.common.collect.ImmutableList;
 import io.luna.LunaContext;
 import io.luna.game.model.chunk.Chunk;
-import io.luna.game.model.chunk.ChunkPosition;
 import io.luna.game.model.mob.Player;
 import io.luna.net.msg.GameMessageWriter;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -29,12 +27,12 @@ public abstract class StationaryEntity extends Entity {
     /**
      * The player to update for. If empty, updates for all players.
      */
-    private final Optional<Player> player;
+    private final Player player;
 
     /**
      * The surrounding players. Initialized lazily, use {@link #getSurroundingPlayers()}.
      */
-    private ImmutableList<Set<Player>> surroundingPlayers;
+    private List<Set<Player>> surroundingPlayers;
 
     /**
      * Creates a new local {@link StationaryEntity}.
@@ -44,7 +42,7 @@ public abstract class StationaryEntity extends Entity {
      * @param type The entity type.
      * @param player The player to update for. If empty, updates for all players.
      */
-    public StationaryEntity(LunaContext context, Position position, EntityType type, Optional<Player> player) {
+    public StationaryEntity(LunaContext context, Position position, EntityType type, Player player) {
         super(context, position, type);
         this.player = player;
     }
@@ -85,10 +83,9 @@ public abstract class StationaryEntity extends Entity {
      * @param updateType The update type to apply.
      */
     private void applyUpdate(UpdateType updateType) {
-        if (player.isPresent() && player.get().isViewableFrom(this)) {
-
+        if (player != null && player.isViewableFrom(this)) {
             // We have a player to update for.
-            sendUpdateMessage(player.get(), updateType);
+            sendUpdateMessage(player, updateType);
         } else {
             // We don't, so update for all viewable surrounding players.
             for (Set<Player> chunkPlayers : getSurroundingPlayers()) {
@@ -108,8 +105,9 @@ public abstract class StationaryEntity extends Entity {
      * @param updateType The update type to apply.
      */
     private void sendUpdateMessage(Player player, UpdateType updateType) {
-        ChunkPosition chunkPosition = player.getChunkPosition();
+        var chunkPosition = player.getChunkPosition();
         int offset = chunkPosition.offset(position);
+        
         if (updateType == UpdateType.SHOW) {
             player.queue(showMessage(offset));
         } else if (updateType == UpdateType.HIDE) {
@@ -121,35 +119,39 @@ public abstract class StationaryEntity extends Entity {
      * @return The player to update for.
      */
     public final Optional<Player> getPlayer() {
-        return player;
+        return Optional.ofNullable(player);
     }
 
     /**
      * @return {@code true} if this entity is updating for everyone.
      */
     public final boolean isGlobal() {
-        return !player.isPresent();
+        return player == null;
     }
 
     /**
-     * Returns an {@link ImmutableList} representing surrounding players. Each set represents players within a viewable
-     * chunk.
+     * Returns an unmodifiable {@link List} representing surrounding players. Each set represents players within a
+     * viewable chunk.
      * <p>
      * We retain references to the original sets instead of flattening them, so that they implicitly stay updated as
      * players move in and out of view of this entity.
      */
-    public final ImmutableList<Set<Player>> getSurroundingPlayers() {
+    public final List<Set<Player>> getSurroundingPlayers() {
         if (surroundingPlayers == null) {
-            ImmutableList.Builder<Set<Player>> builder = ImmutableList.builder();
+            List<Set<Player>> temp = new ArrayList<>();
+            
             // Retrieve viewable chunks.
             List<Chunk> viewableChunks = world.getChunks().getViewableChunks(position);
+            
             for (Chunk chunk : viewableChunks) {
                 // Wrap players in immutable view, add it.
-                Set<Player> players = Collections.unmodifiableSet(chunk.getAll(EntityType.PLAYER));
-                builder.add(players);
+                Set<Player> players = Set.copyOf(chunk.getAll(EntityType.PLAYER));
+                temp.add(players);
             }
-            surroundingPlayers = builder.build();
+            
+            surroundingPlayers = List.copyOf(temp);
         }
+        
         return surroundingPlayers;
     }
 }
