@@ -7,8 +7,8 @@ import io.luna.net.codec.ByteMessage;
 import io.luna.net.codec.MessageType;
 import io.luna.net.msg.GameMessageWriter;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 /**
  * A {@link GameMessageWriter} implementation that displays an item on a widget.
@@ -53,17 +53,19 @@ public final class WidgetIndexedItemsMessageWriter extends GameMessageWriter {
             this.items = ImmutableList.of(items[0]);
         } else {
             // Arrays.asList is faster here, doesn't make a copy of the array.
-            this.items = Arrays.asList(items);
+            this.items = List.of(items);
         }
     }
 
     @Override
     public ByteMessage write(Player player) {
-        ByteMessage msg = ByteMessage.message(34, MessageType.VAR_SHORT);
+        var msg = ByteMessage.message(34, MessageType.VAR_SHORT);
+        
         msg.putShort(id);
 
         for (IndexedItem item : items) {
             int index = item.getIndex();
+            
             if (index <= 127) {
                 msg.put(index);
             } else {
@@ -73,6 +75,7 @@ public final class WidgetIndexedItemsMessageWriter extends GameMessageWriter {
             msg.putShort(item.getId() + 1);
 
             int amount = item.getAmount();
+            
             if (amount >= 255) {
                 msg.put(255);
                 msg.putInt(amount);
@@ -80,6 +83,7 @@ public final class WidgetIndexedItemsMessageWriter extends GameMessageWriter {
                 msg.put(amount);
             }
         }
+        
         return msg;
     }
 }
